<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/linearLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:id="@+id/deviceName"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/default_address"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/numConnectionsText" />

    <TextView
        android:id="@+id/lastMessageRx"
        android:layout_width="0dp"
        android:layout_height="22dp"
        android:text="@string/no_messages_yet"
        android:textAlignment="center"
        app:layout_constraintBottom_toBottomOf="@id/lastMessageTx"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.899" />

    <TextView
        android:id="@+id/lastMessageTx"
        android:layout_width="0dp"
        android:layout_height="22dp"
        android:text="@string/no_messages_yet"
        android:textAlignment="center"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.717" />

    <TextView
        android:id="@+id/numConnectionsText"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/devices_in_network_1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/editTextField"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="4dp"
        android:hint="@string/enter_message_here"
        android:importantForAutofill="no"
        android:inputType="text"
        app:layout_constraintBottom_toTopOf="@+id/sendMessageButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/editAddressField"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/send_address"
        android:importantForAutofill="no"
        android:inputType="text"
        app:layout_constraintBottom_toTopOf="@+id/editTextField"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/setAddressField"
        android:layout_width="254dp"
        android:layout_height="41dp"
        android:hint="@string/set_address_field"
        android:importantForAutofill="no"
        android:inputType="text"
        app:layout_constraintBottom_toTopOf="@+id/editAddressField"
        app:layout_constraintEnd_toStartOf="@+id/setAddressButton"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/sendMessageButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/send_message"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/setAddressButton"
        android:layout_width="152dp"
        android:layout_height="47dp"
        android:text="@string/set_address_button"
        app:layout_constraintBottom_toTopOf="@+id/editAddressField"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/textViewRouteTable"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/label_route_table"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.024"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/deviceName" />

    <TextView
        android:id="@+id/routeTabletextView"
        android:layout_width="393dp"
        android:layout_height="106dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewRouteTable" />

    <Button
        android:id="@+id/sendBurstButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Send burst"
        app:layout_constraintEnd_toEndOf="parent"
        tools:layout_editor_absoluteY="397dp" />

    <Button
        android:id="@+id/buttonLoadData"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="18dp"
        android:text="Load"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/routeTabletextView" />

</androidx.constraintlayout.widget.ConstraintLayout>